<resources>
    <string name="app_name">SofaNBA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottomNavFragment1">EXPLORE</string>
    <string name="bottomNavFragment2">FAVORITES</string>
    <string name="bottomNavFragment3">SEASONS</string>
    <string name="bottomNavFragment4">SETTINGS</string>
    <string name="inputFieldSearchText">Search</string>
    <string-array name="headerSelectorValues">
        <item name="headerSelectorValue1">Players</item>
        <item name="headerSelectorValue2">Teams</item>
    </string-array>
    <string name="favorite_title1">Players</string>
    <string name="favorite_title2">Teams</string>
    <string name="explore_title1">All Players</string>
    <string name="explore_title2">All Teams</string>
    <string name="color_name_template">team_%1$s_primary</string>
    <string name="color_name_50pct">team_%1$s_primary_50pct</string>
    <string name="match_teams_template">%1$s VS %2$s</string>
    <string name="filter_season_template">%1$d - %2$d</string>
    <string name="highlight_placeholder_template">http://img.youtube.com/vi/%1$s/mqdefault.jpg</string>
    <string name="highlight_url_template">%1$s&amp;t=%2$ds</string>
    <string name="photo_name_team_template">ic_assets_exportable_logos_club_logos_%1$s_conference_%2$s_transparent</string>
    <string name="playerTabTitle1">DETAILS</string>
    <string name="playerTabTitle2">STATISTICS</string>
    <string name="playerTabTitle3">MATCHES</string>
    <string-array name="playerStatsValues">
        <item name="value1">MIN</item>
        <item name="value2">FGM</item>
        <item name="value3">FGA</item>
        <item name="value4">FG3M</item>
        <item name="value5">FG3A</item>
        <item name="value6">FTM</item>
        <item name="value7">FTA</item>
        <item name="value8">OREB</item>
        <item name="value9">DREB</item>
        <item name="value10">REB</item>
        <item name="value11">AST</item>
        <item name="value12">STL</item>
        <item name="value13">BLK</item>
        <item name="value14">TOV</item>
        <item name="value15">PF</item>
        <item name="value16">PTS</item>
        <item name="value17">FG%</item>
        <item name="value18">FG3%</item>
        <item name="value19">FT%</item>
    </string-array>
    <string name="matches_spinner_placeholder">Seasons</string>
    <string name="teamTabTitle1">DETAILS</string>
    <string name="teamTabTitle2">MATCHES</string>
    <string name="matchTabTitle1">DETAILS</string>
    <string name="matchTabTitle2">TOP PLAYERS</string>
    <string name="matchStatTitle1">FG</string>
    <string name="matchStatTitle2">FG3</string>
    <string name="matchStatTitle3">REB</string>
    <string name="matchStatTitle4">AST</string>
    <string name="matchStatTitle5">TOV</string>
    <string name="matchStatTitle6">OREB</string>
    <string name="topPlayersStatTitle1">Field Goals Made</string>
    <string name="topPlayersStatTitle2">Field Goal 3-pointers Made</string>
    <string name="topPlayersStatTitle3">Offensive Rebounds</string>
    <string name="topPlayersStatTitle4">Rebounds</string>
    <string name="topPlayersStatTitle5">Assists</string>
    <string name="topPlayersStatTitle6">Turnover</string>
    <string name="mainFragmentTitle2">Favorites</string>
    <string name="mainFragmentTitle3">Seasons</string>
    <string name="mainFragmentTitle4">Settings</string>
    <string name="placeholderFavoriteTitle1">No Favorite Players found</string>
    <string name="placeholderFavoriteTitle2">No Favorite Teams found</string>
    <string name="seasonsFilterPlaceholder1">Team</string>
    <string name="seasonsFilterPlaceholder2">Season</string>
    <string name="clearFavoritesAlertTitle">Clear favorites list?</string>
    <string name="clearFavoritesAlertCancel">CANCEL</string>
    <string name="clearFavoritesAlertClear">CLEAR</string>
    <string name="clearFavoritesSnackbar">Favorites list is clear.</string>
    <string name="aboutTitle">About</string>
    <string name="aboutText">Super cool NBA app.</string>
    <string name="aboutWeb">MORE INFO</string>
    <string name="aboutSubtitle" translatable="false">SofaScore Academy</string>
    <string name="aboutClass" translatable="false">Class 2022</string>
    <string name="aboutAppNameTitle">App Name</string>
    <string name="aboutAppNameText" >NBA App</string>
    <string name="aboutApiCreditTitle" >API Credit</string>
    <string name="aboutApiCreditText" >balldontlie</string>
    <string name="aboutDeveloperTitle" >Developer</string>
    <string name="aboutDeveloperText" >Ana Konjetić</string>
    <string name="teamMatchesResultChar1" >W</string>
    <string name="teamMatchesResultChar2" >L</string>
    <string name="teamMatchesHomeOrVisitorChar" >VS</string>
    <string name="invalidUrlText">Invalid URL</string>
    <string name="playerDetail1">Height</string>
    <string name="playerDetail2">Weight</string>
    <string name="playerDetailTitle1">CONFERENCE</string>
    <string name="playerDetailTitle2">DIVISION</string>
    <string name="playerPosition1">Forward</string>
    <string name="playerPosition2">Center</string>
    <string name="playerPosition3">Guard</string>
    <string name="notApplicable">N/A</string>
    <string name="placeholderFilter1">No matches found</string>
    <string name="bottomSheetPlayerSeasonTitle">Filter matches</string>
    <string name="bottomSheetPlayerSeasonButton">APPLY</string>
    <string name="matchActivityToolbarTitle">MATCH INFO</string>
    <string name="bottomSheetButton1">CANCEL</string>
    <string name="bottomSheetButton2">ADD</string>
    <string name="bottomSheetHeaderTitle">Add player photo</string>
    <string name="bottomSheetPlayerHint1">URL</string>
    <string name="bottomSheetPlayerHint2">PHOTO TITLE</string>
    <string name="bottomSheetPlayerHint3">Video title</string>
    <string name="bottomSheetPlayerDescription1">Paste video URL</string>
    <string name="bottomSheetPlayerDescription2"> </string>
    <string name="settingsButtonClear">CLEAR MY FAVORITES LIST</string>
    <string name="teamDetailsDivisionTitle">Other teams in the division</string>
    <string name="matchHighlightsPlaceholderTitle">Match title name</string>
    <string name="matchHighlightsPlaceholderTitle2">Youtube Highlights</string>
    <string name="matchHighlightsPlaceholderSubtitle">Add a YouTube URL to see videos for this team</string>
    <string name="matchHighlightsPlaceholderButton">Add URL</string>
    <string name="playerDetailsSubtitle">TEAM</string>
    <string name="playerMatchesHeaderButton1">REGULAR SEASON</string>
    <string name="playerMatchesHeaderButton2">PLAYOFFS</string>
    <string name="seasonsHeaderTitle">Seasons</string>
</resources>

