<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/bottom_sheet_header"
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/urlView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="16dp"
        app:cardElevation="0dp"
        app:contentPadding="0dp"
        app:cardBackgroundColor="@color/surface_surface_2"
        app:cardCornerRadius="4dp">

        <EditText
            android:hint="@string/bottomSheetPlayerHint1"
            android:id="@+id/imageUrl"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="16dp"/>


    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/urlText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottomSheetPlayerDescription1"

        style="@style/AssistiveNLv2Left"
        app:layout_constraintTop_toBottomOf="@id/urlView"
        android:layout_marginHorizontal="32dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/videoTitle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/urlText"
        android:layout_marginTop="16dp"
        app:cardElevation="0dp"
        app:contentPadding="0dp"
        app:cardBackgroundColor="@color/surface_surface_2"
        app:cardCornerRadius="4dp">

        <EditText
            android:hint="@string/bottomSheetPlayerHint3"
            android:id="@+id/videoText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="16dp"/>


    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" Type a video title, ie. &quot;Lakers vs. Nets Half time”"

        style="@style/AssistiveNLv2Left"
        app:layout_constraintTop_toBottomOf="@id/videoTitle"
        android:layout_marginHorizontal="32dp"/>


    <include
        layout="@layout/bottom_sheet_buttons"
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textText"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="54dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>