<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/highlightsPlaceholder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surface_surface_0">

    <TextView
        android:id="@+id/highlightsTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        style="@style/HeadlineSmallNLv1Left"
        android:padding="14dp"
        android:text="@string/matchHighlightsPlaceholderTitle2"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/cardPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/highlightsTitle"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/surface_surface_1"
        app:cardElevation="1dp">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/videoSkeleton"
                android:layout_width="112dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_placeholder_video_skeleton"
                android:scaleType="centerCrop"
                android:layout_margin="8dp"/>

            <View
                android:id="@+id/textPlaceholder1"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/neutrals_n_lv_2"
                android:layout_toEndOf="@id/videoSkeleton"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="22dp"
                style="@style/ShapeAppearanceOverlay.App.CornerSize8dp"/>

            <View
                android:id="@+id/textPlaceholder2"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/neutrals_n_lv_2"
                android:layout_toEndOf="@id/videoSkeleton"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_below="@id/textPlaceholder1"
                android:layout_marginTop="8dp"
                style="@style/ShapeAppearanceOverlay.App.CornerSize8dp"/>

            <View
                android:id="@+id/textPlaceholder3"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/neutrals_n_lv_2"
                android:layout_toEndOf="@id/videoSkeleton"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="80dp"
                android:layout_below="@id/textPlaceholder2"
                android:layout_marginTop="8dp"
                style="@style/ShapeAppearanceOverlay.App.CornerSize8dp"/>

        </RelativeLayout>
        
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardPlaceholder"
        style="@style/RelativeLayout"
        android:layout_marginHorizontal="8dp"
        android:background="@color/surface_surface_2">

        <TextView
            android:id="@+id/addVideoText"
            style="@style/AssistiveNLv2Left"
            android:layout_width="202dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/matchHighlightsPlaceholderSubtitle" />

        <TextView
            android:id="@+id/addUrlButton"
            android:layout_width="93dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/addVideoText"
            android:background="@drawable/highlights_button_background"
            android:text="@string/matchHighlightsPlaceholderButton"
            style="@style/ButtonLabelPrimaryCenter"
            android:padding="8dp"/>




    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>